examples/test/testpolicy13356.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13356
  namespace: namespace350
spec:
  podSelector:
    matchLabels:
      key8: value7
      key22: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value4
          key38: value12
      podSelector:
        matchLabels:
          key37: value28
          key4: value43
